apps/flaresolverr/cloudflared.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr-cloudflared
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: flaresolverr.btrcloud.com
    http:
      paths:
      - backend:
          service:
            name: flaresolverr
            port:
              number: 8191
        path: /
        pathType: Prefix
