apps/flaresolverr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flaresolverr-https
spec:
  hostnames:
  - flaresolverr.menia.cc
  parentRefs:
  - name: shared-gateway
    namespace: default
    sectionName: shared-https
  rules:
  - backendRefs:
    - name: flaresolverr
      port: 8191
