apps/flaresolverr/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flaresolverr
  namespace: flaresolverr
spec:
  hostnames:
  - flaresolverr.menia.cc
  parentRefs:
  - name: shared-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: flaresolverr
      port: 8191
    matches:
    - path:
        type: PathPrefix
        value: /
